Added free and paid Flavour

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,14 +20,14 @@ android {
         }
     }
 
- /*   productFlavors {
+    productFlavors {
         free {
             applicationId "com.digital.builditbigger.free"
         }
         paid {
             applicationId "com.digital.builditbigger.paid"
         }
-    }*/
+    }
 }
 
 dependencies {
