--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.+'
     compile project(path: ':jokebackend', configuration: 'android-endpoints')
     compile project(':jokeandroidlib')
-    compile 'com.google.android.gms:play-services-ads:7.8.0'
+    freeCompile 'com.google.android.gms:play-services-ads:7.8.0'
     compile 'com.jakewharton:butterknife:7.0.1'
 }
